--- a/hello-world.html
+++ b/hello-world.html
@@ -6,6 +6,8 @@
 	</head>
 	<body>
 		<div ng-controller="HelloController">
+			 <!-- databinding example -->
+			 <input type="text" ng-model="greeting.text">
 			<p>{{greeting.text}}, World.</p>
 		</div>
 		<script>
