--- a/hello-world.html
+++ b/hello-world.html
@@ -1,17 +1,16 @@
 <!doctype>
 <html ng-app>
 	<head>
-		<title>Hello Controller</title>
+		<title>HelloWold Controller</title>
 		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.10/angular.min.js"></script>
 	</head>
 	<body>
-		<div ng-controller="HelloController">
-			 <!-- databinding example -->
-			 <input type="text" ng-model="greeting.text">
-			<p>{{greeting.text}}, World.</p>
+		<div ng-controller="HelloWorlController">
+			<input type="text" ng-model="greeting.text">
+			<p>{{greeting.text}}, World</p>
 		</div>
 		<script>
-			function HelloController($scope){
+			function HelloWorlController($scope) {
 				$scope.greeting = { text : 'Hello'};
 			}
 		</script>
