--- a/SPA-angular-routing-templating/index.html
+++ b/SPA-angular-routing-templating/index.html
@@ -8,10 +8,11 @@
 	  	<!-- load jquery,bootstrap and angular via CDN -->
 	  	 <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
 	  	 <script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
-	  	 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.8/angular.min.js"></script>
+	  	 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.10/angular.min.js"></script>
+	  	 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.10/angular-route.js"></script>
 	  	 <script src="script.js"></script>
 	</head>
-	<body ng-controller="mainController">
+	<body >
 		<!-- Header and NavBar -->
 		<header>
 			<nav class="navbar navbar-default">
@@ -19,14 +20,19 @@
 					<div class="navbar-header">
 						<a class="navbar-brand" href="/">Angular Routing Example</a>
 					</div>
+					<ul class="nav navbar-nav navbar-right">
+						<li><a href="#"><i class="fa fa-home"></i>Home</a></li>
+						<li><a href="#about"><i class="fa fa-shield"></i>About</a></li>
+						<li><a href="#contact"><i class="fa fa-comment"></i>Contact</a></li>
+					</ul>
 				</div>
 			</nav>			
 		</header>
 		<!-- Main conent and Injected Views -->
-		<div id="main">
+		<div ng-controller="mainController">
 			<!-- angular templating -->
-			{{message}}
 			<!-- this is where content will be injected -->
+			<div ng-view></div>
 		</div>
 		<!-- Footer -->
 		<footer class="text-center">
