--- a/SPA-angular-routing-templating/pages/contact.html
+++ b/SPA-angular-routing-templating/pages/contact.html
@@ -1,5 +1,5 @@
-<!-- Home.html -->
+<!-- Contact.html -->
 <div class="jumbotron text-center">
-	<h1>Home Page</h1>
+	<h1>Contact Page</h1>
 	<p>{{message}}</p>
 </div>
