Added the tutorial URLin a comment

--- a/SPA-angular-routing-templating/index.html
+++ b/SPA-angular-routing-templating/index.html
@@ -1,4 +1,6 @@
 <!-- index.html -->
+<!-- Original Article -->
+<!-- http://scotch.io/tutorials/javascript/single-page-apps-with-angularjs-routing-and-templating -->
 <!doctype html>
 <html ng-app="SPApp">
 	<head>
